# Programacion-C-Clase1

./: prueba.txt
ejemplos/1/: holamundo.c
ejemplos/2/: holamundo.c  holamundo.h
ejemplos/3/: prog.c
ejemplos/4/: Makefile  Makefile.in  autogen.sh  config.status  configure  configure.ac
ejemplos/4/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
ejemplos/4/src/: Makefile  Makefile.am  Makefile.in  holaclase.c
ejemplos/ficheroconfiguracion/: gitconfig  vimrc
ejercicios/1/: if.c
ejercicios/2/: switch.c  switch2.c
ejercicios/3/: while.c
ejercicios/4/: for.c
ejercicios/5/: foretiquetas.c
ejercicios/6/: funciones.c
ejercicios/7/: main.c  utils.c  utils.h
ejercicios/8/src/.deps/: holaclase.Po
